--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     compile "org.grails.plugins:gsp"
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
-    compile 'com.bertramlabs.plugins:selfie:2.0.0'
+    compile 'com.bertramlabs.plugins:karman-grails:1.2.4'
 
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
