--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.4.0.Final"
 
+    compile "com.xlson.groovycsv:groovycsv:1.3"
     compile "org.grails.plugins:gsp"
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
