--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -73,6 +73,10 @@ grails:
             maxsize: 1000
     controllers:
         defaultScope: singleton
+        upload:
+            maxFileSize: 26214400 # 25MB
+            maxRequestSize: 26214400 # 25MB
+
     converters:
         encoding: UTF-8
     views:
