feat(varios): busqueda, bajas Fix #7 #8 #12

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -121,6 +121,11 @@ admin:
     username: admin
     password: admin
 
+# general application CUSTOM configurations
+app:
+    pagination:
+        max: 7
+
 environments:
     development:
         dataSource:
