--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
         classpath "com.bmuschko:gradle-docker-plugin:6.0.0"
+        classpath 'org.grails.plugins:database-migration:3.1.0'
     }
 }
 
@@ -64,6 +65,10 @@ dependencies {
     compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
     compile "org.ocpsoft.prettytime:prettytime:4.0.3.Final"
 
+    // migration
+    compile 'org.grails.plugins:database-migration:3.1.0'
+    // compile 'org.liquibase:liquibase-core:3.5.5'
+
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
@@ -86,6 +91,14 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
+}
+
+sourceSets {
+  main {
+    resources {
+      srcDir 'grails-app/migrations/'
+    }
+  }
 }
 
 bootRun {
