--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -141,7 +141,8 @@ environments:
             username: '${ADMIN_USERNAME:admin}'
             password: '${ADMIN_PASSWORD:admin}'
         dataSource:
-            dbCreate: update
+            #dbCreate: update
+            dbCreate: none
             url: '${DATABASE_URL:jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE}'
             driverClassName: '${DATABASE_DRIVER_CLASSNAME:org.h2.Driver}'
             username: '${DATABASE_USERNAME:masiaventura}'
