--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -129,8 +129,9 @@ app:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: none
+            # MODE=PostgreSQL para poder utilizar los scripts de migración
+            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
     test:
         dataSource:
             dbCreate: update
@@ -143,7 +144,7 @@ environments:
         dataSource:
             #dbCreate: update
             dbCreate: none
-            url: '${DATABASE_URL:jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE}'
+            url: '${DATABASE_URL:jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE}'
             driverClassName: '${DATABASE_DRIVER_CLASSNAME:org.h2.Driver}'
             username: '${DATABASE_USERNAME:masiaventura}'
             password: '${DATABASE_PASSWORD:masiaventura}'
