--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -131,7 +131,10 @@ environments:
         dataSource:
             dbCreate: none
             # MODE=PostgreSQL para poder utilizar los scripts de migración
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
+            url: '${DATABASE_URL:jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE}'
+            driverClassName: '${DATABASE_DRIVER_CLASSNAME:org.h2.Driver}'
+            username: '${DATABASE_USERNAME:liceo}'
+            password: '${DATABASE_PASSWORD:liceo}'
     test:
         dataSource:
             dbCreate: update
@@ -146,8 +149,8 @@ environments:
             dbCreate: none
             url: '${DATABASE_URL:jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE}'
             driverClassName: '${DATABASE_DRIVER_CLASSNAME:org.h2.Driver}'
-            username: '${DATABASE_USERNAME:masiaventura}'
-            password: '${DATABASE_PASSWORD:masiaventura}'
+            username: '${DATABASE_USERNAME:liceo}'
+            password: '${DATABASE_PASSWORD:liceo}'
             properties:
                 autocommit: false
         storage:
