fix(alerts): fixes #44 descripcion de alertas no se muestra completa

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -113,7 +113,7 @@ dataSource:
 # where attachments are going to be
 # stored in the system
 storage:
-    storagePath: /tmp/kk
+    storagePath: '${LICEO_FILES:/tmp/liceo}'
 
 # default admin values, please change it! 
 # once the application is up and running
