fix(gsps): fixes #51 error al volver al listado de procesos

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 
-version "0.4.2"
+version "0.4.3-SNAPSHOT"
 group "liceo"
 
 apply plugin:"eclipse"
